@@ -3,6 +3,7 @@ package App::Doh::Role::Authorization;
 use attributes ();
 use namespace::autoclean;
 
+use App::Doh::Functions    qw( is_static );
 use Class::Usul::Constants qw( NUL );
 use Class::Usul::Functions qw( is_member throw );
 use HTTP::Status           qw( HTTP_FORBIDDEN HTTP_NOT_FOUND
@@ -23,7 +24,7 @@ around 'execute' => sub {
       or throw error => 'Class [_1] method [_2] is private',
                args  => [ $class, $method ], rv => HTTP_FORBIDDEN;
 
-   ($ENV{DOH_MAKE_STATIC} or is_member 'anon', $method_roles)
+   (is_static or is_member 'anon', $method_roles)
       and return $orig->( $self, $method, $req );
 
    $req->authenticated
